[SECURITY-3676]